# roscamp-repo-2

./: .gitmodules  README.md  requirements.txt
Boltbot_pkg/: setup.cfg
Boltbot_pkg/auto_navigation_pkg/: auto_navigation_node.py  test_pose_publisher.py
bolt_fms/: CMakeLists.txt  package.xml
bolt_fms/bolt_fms/: module_to_import.py  qtmonitor_tag_tracker.py  robot_status_monitor.py  tag_tracker_node.py
bolt_fms/config/: domain_bridge_config.yaml
bolt_fms/launch/: fms_server.launch.py
bolt_fms/log/: latest_list
bolt_fms/scripts/: auto_grid_and_publisher.py  auto_grid_points.py  available_grid.py  goal_action.py  goal_publisher.py  scheduler_core.py  transed_point.py
bolt_fms/scripts/camera_controller/: auto_grid_and_publisher.py  auto_navigation_node.py  calibration.py  capture.py  goal_node_test.py  goal_publisher.py  perspective_transform.py  py_node.py  select_grid.py  testpid.yaml
bolt_fms/scripts/log/: latest_list
bolt_fms/scripts/path_plan_manager/: dynamic.py  path_plan.py  path_plan_manager.py  qtdynamic.py  visualization.py
bolt_fms/scripts/task_schedule_manager/: qtmonitor_task_schedule_manager.py  task_schedule_manager.py  task_schedule_manager_two_process.py
bolt_fms/src/: task_scheduler.cpp
bolt_fms_vision/: package.xml  setup.cfg  setup.py
bolt_fms_vision/bolt_fms_vision/: tag_tracker_node.py
bolt_mall_web/: database.py  main.py  models.py  requirements.txt
bolt_mall_web/log/: latest_list
bolt_mall_web/routes/: orders.py
bolt_mall_web/static/css/: cart.css  mall.css
bolt_mall_web/static/js/: cart.js  mall.js
bolt_mall_web/templates/: bolt-mall-cart.html  bolt-mall.html  payment-complete.html
boltbot/: package.xml  setup.py
boltbot/auto_navigation_pkg/: README.md  robot_state_machine.py
boltbot_obstacle/: package.xml  setup.cfg  setup.py
boltbot_obstacle/boltbot_obstacle/: obstacle_node.py  yolo_socket_node.py
boltbot_obstacle/launch/: obstacle_yolo_launch.py
boltbot_pkg/auto_navigation_pkg/: README.md  backup.py  pid_config.yaml  robot_state_machine.py
fms_system/: package.xml
fms_system/launch/: fms_server.launch.py
fms_system/msg/: TaskCommand.msg
fms_system/src/: inventory_manager_node.cpp  monitoring_manager_node.cpp
log/: latest_list
src/fms_system/: CMakeLists.txt
src/fms_system/src/: agent_manager_node.cpp  task_manager_node.cpp  traffic_manager_node.cpp
